# saruca

./: .gitignore  GEMINI.md  README.md  analysis_notebook.py  analyze_parquet.py  analyze_tools.py  dig_into_data.py  explore_data.py  export_unified.sh  pyproject.toml  requirements.txt  saruca  sync_logs.sh
saruca/: __init__.py  cli.py  loader.py
src/saruca/: __init__.py  analysis.py  cli.py  extract_data.py  loader.py  log_config.py  models.py  summarizer.py
